<resources>
    <string name="app_name">DewDrop</string>
    <string name="user">Username:</string>
    <string name="passw">Password:</string>
    <string name="signin">Sign In</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="forgotten"><u>Have you forgotten your password?</u></string>
    <string name="googleLabel"> Or use your Google Account</string>

    <string name="name"> Name: </string>
    <string name="surname"> Surname: </string>
    <string name="email"> Email</string>
    <string name="birthdate"> Birthdate: </string>
    <string name="password"> Password: </string>
    <string name="imageChoose"> Choose</string>
    <string name="okButton">Ok</string>
    <string name="cancelButton"> Cancel</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
