<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.volcano.dewdrop.SignUpActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-42dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="314dp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="301dp" />

            <EditText
                android:id="@+id/editBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="231dp" />

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:id="@+id/birthLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birthdate"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="244dp" />

            <TextView
                android:id="@+id/surnameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/surname"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="176dp" />

            <EditText
                android:id="@+id/surnameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="160dp" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="108dp"
                tools:layout_editor_absoluteY="368dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="160dp"
                tools:layout_editor_absoluteY="468dp" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_weight="1"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/emailLabel"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="60dp"
                tools:layout_editor_absoluteY="427dp" />

            <Button
                android:id="@+id/chooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imageChoose"
                tools:layout_editor_absoluteX="235dp"
                tools:layout_editor_absoluteY="427dp" />

            <Button
                android:id="@+id/okButton"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okButton"
                tools:layout_editor_absoluteX="235dp"
                tools:layout_editor_absoluteY="526dp" />

            <Button
                android:id="@+id/cancelButton"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelButton"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="523dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
